@@ -13,26 +13,25 @@ import org.elasticsearch.test.ESTestCase;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Stream;
 
 import static org.elasticsearch.health.HealthStatus.GREEN;
 import static org.elasticsearch.health.HealthStatus.RED;
 import static org.elasticsearch.health.HealthStatus.UNKNOWN;
 import static org.elasticsearch.health.HealthStatus.YELLOW;
-import static org.hamcrest.Matchers.anyOf;
 import static org.hamcrest.Matchers.contains;
 import static org.hamcrest.Matchers.containsInAnyOrder;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.hasItems;
 import static org.hamcrest.Matchers.is;
-import static org.hamcrest.Matchers.notNullValue;
 
 public class HealthServiceTests extends ESTestCase {
 
     public void testShouldReturnGroupedIndicators() {
 
-        var networkLatency = new HealthIndicatorResult("network_latency", "coordination", GREEN, null, null, null, null, null);
-        var slowTasks = new HealthIndicatorResult("slow_task_assignment", "coordination", YELLOW, null, null, null, null, null);
-        var shardsAvailable = new HealthIndicatorResult("shards_availability", "data", GREEN, null, null, null, null, null);
+        var networkLatency = new HealthIndicatorResult("network_latency", GREEN, null, null, null, null);
+        var slowTasks = new HealthIndicatorResult("slow_task_assignment", YELLOW, null, null, null, null);
+        var shardsAvailable = new HealthIndicatorResult("shards_availability", GREEN, null, null, null, null);
 
         var service = new HealthService(
             Collections.emptyList(),
@@ -43,63 +42,39 @@ public class HealthServiceTests extends ESTestCase {
             )
         );
 
-        assertThat(
-            service.getHealth(null, null, false),
-            anyOf(
-                hasItems(
-                    new HealthComponentResult("coordination", YELLOW, List.of(slowTasks, networkLatency)),
-                    new HealthComponentResult("data", GREEN, List.of(shardsAvailable))
-                ),
-                hasItems(
-                    new HealthComponentResult("coordination", YELLOW, List.of(networkLatency, slowTasks)),
-                    new HealthComponentResult("data", GREEN, List.of(shardsAvailable))
-                )
-            )
-        );
+        assertThat(service.getHealth(null, false), hasItems(slowTasks, networkLatency, shardsAvailable));
 
-        assertThat(
-            service.getHealth("coordination", null, false),
-            anyOf(
-                hasItems(new HealthComponentResult("coordination", YELLOW, List.of(slowTasks, networkLatency))),
-                hasItems(new HealthComponentResult("coordination", YELLOW, List.of(networkLatency, slowTasks)))
-            )
-        );
+        assertThat(service.getHealth(null, false), hasItems(slowTasks, networkLatency, networkLatency, slowTasks));
 
-        assertThat(
-            service.getHealth("coordination", "slow_task_assignment", false),
-            hasItems(new HealthComponentResult("coordination", null, List.of(slowTasks)))
-        );
+        assertThat(service.getHealth("slow_task_assignment", false), hasItems(slowTasks));
     }
 
     public void testDuplicateIndicatorNames() {
-        // Same component, same indicator name, should throw exception:
+        // Same indicator name, should throw exception:
         var networkLatency = new HealthIndicatorResult(
             "network_latency",
-            "coordination",
             GREEN,
             null,
             null,
-            null,
             Collections.emptyList(),
             Collections.emptyList()
         );
-        var slowTasks = new HealthIndicatorResult(
-            "network_latency",
-            "coordination",
-            YELLOW,
-            null,
-            null,
-            null,
+        var slowTasks = new HealthIndicatorResult("network_latency", YELLOW, null, null, Collections.emptyList(), Collections.emptyList());
+        var service = new HealthService(
             Collections.emptyList(),
-            Collections.emptyList()
+            List.of(
+                createMockHealthIndicatorService(networkLatency),
+                createMockHealthIndicatorService(slowTasks),
+                createMockHealthIndicatorService(networkLatency)
+            )
         );
-        expectThrows(AssertionError.class, () -> HealthService.createComponentFromIndicators(List.of(networkLatency, slowTasks), true));
+        expectThrows(AssertionError.class, () -> service.getHealth(null, true));
     }
 
-    public void testMissingComponentOrIndicator() {
-        var networkLatency = new HealthIndicatorResult("network_latency", "coordination", GREEN, null, null, null, null, null);
-        var slowTasks = new HealthIndicatorResult("slow_task_assignment", "coordination", YELLOW, null, null, null, null, null);
-        var shardsAvailable = new HealthIndicatorResult("shards_availability", "data", GREEN, null, null, null, null, null);
+    public void testMissingIndicator() {
+        var networkLatency = new HealthIndicatorResult("network_latency", GREEN, null, null, null, null);
+        var slowTasks = new HealthIndicatorResult("slow_task_assignment", YELLOW, null, null, null, null);
+        var shardsAvailable = new HealthIndicatorResult("shards_availability", GREEN, null, null, null, null);
 
         var service = new HealthService(
             Collections.emptyList(),
@@ -110,26 +85,16 @@ public class HealthServiceTests extends ESTestCase {
             )
         );
 
-        expectThrows(
-            ResourceNotFoundException.class,
-            "Did not find component component99",
-            () -> service.getHealth("component99", null, false)
-        );
-
-        expectThrows(
-            ResourceNotFoundException.class,
-            "Did not find indicator indicator99 in component component1",
-            () -> service.getHealth("coordination", "indicator99", false)
-        );
+        expectThrows(ResourceNotFoundException.class, "Did not find indicator indicator99", () -> service.getHealth("indicator99", false));
     }
 
     public void testPreflightIndicatorResultsPresent() {
         // Preflight check
-        var hasMaster = new HealthIndicatorResult("has_master", "coordination", GREEN, null, null, null, null, null);
+        var hasMaster = new HealthIndicatorResult("has_master", GREEN, null, null, null, null);
         // Other indicators
-        var networkLatency = new HealthIndicatorResult("network_latency", "coordination", GREEN, null, null, null, null, null);
-        var slowTasks = new HealthIndicatorResult("slow_task_assignment", "coordination", YELLOW, null, null, null, null, null);
-        var shardsAvailable = new HealthIndicatorResult("shards_availability", "data", GREEN, null, null, null, null, null);
+        var networkLatency = new HealthIndicatorResult("network_latency", GREEN, null, null, null, null);
+        var slowTasks = new HealthIndicatorResult("slow_task_assignment", YELLOW, null, null, null, null);
+        var shardsAvailable = new HealthIndicatorResult("shards_availability", GREEN, null, null, null, null);
 
         var service = new HealthService(
             List.of(createMockHealthIndicatorService(hasMaster)),
@@ -140,76 +105,35 @@ public class HealthServiceTests extends ESTestCase {
             )
         );
 
-        // Get all indicators returns preflight result mixed in with appropriate component
-        List<HealthComponentResult> health = service.getHealth(null, null, false);
-        assertThat(health.size(), is(equalTo(2)));
-        {
-            HealthComponentResult component1 = health.stream()
-                .filter(result -> result.name().equals("coordination"))
-                .findAny()
-                .orElseThrow();
-            assertThat(component1.status(), is(equalTo(YELLOW)));
-            assertThat(component1.indicators(), is(notNullValue()));
-            assertThat(component1.indicators(), containsInAnyOrder(hasMaster, networkLatency, slowTasks));
-        }
-        {
-            HealthComponentResult component2 = health.stream().filter(result -> result.name().equals("data")).findAny().orElseThrow();
-            assertThat(component2.status(), is(equalTo(GREEN)));
-            assertThat(component2.indicators(), is(notNullValue()));
-            assertThat(component2.indicators(), contains(shardsAvailable));
-        }
-
-        // Getting single component returns preflight result mixed in with appropriate component
-        health = service.getHealth("coordination", null, false);
-        assertThat(health.size(), is(equalTo(1)));
-        {
-            HealthComponentResult component1 = health.stream()
-                .filter(result -> result.name().equals("coordination"))
-                .findAny()
-                .orElseThrow();
-            assertThat(component1.status(), is(equalTo(YELLOW)));
-            assertThat(component1.indicators(), is(notNullValue()));
-            assertThat(component1.indicators(), containsInAnyOrder(hasMaster, networkLatency, slowTasks));
-        }
+        // Get all indicators returns preflight result mixed in with the other indicators
+        List<HealthIndicatorResult> health = service.getHealth(null, false);
+        assertThat(health.size(), is(equalTo(4)));
+        assertThat(health, containsInAnyOrder(hasMaster, networkLatency, slowTasks, shardsAvailable));
 
         // Getting single indicator returns correct indicator still
-        health = service.getHealth("coordination", "slow_task_assignment", false);
+        health = service.getHealth("slow_task_assignment", false);
         assertThat(health.size(), is(equalTo(1)));
-        {
-            HealthComponentResult component1 = health.stream()
-                .filter(result -> result.name().equals("coordination"))
-                .findAny()
-                .orElseThrow();
-            assertThat(component1.indicators(), is(notNullValue()));
-            assertThat(component1.indicators(), contains(slowTasks));
-        }
+        assertThat(health, contains(slowTasks));
 
         // Getting single preflight indicator returns preflight indicator correctly
-        health = service.getHealth("coordination", "has_master", false);
+        health = service.getHealth("has_master", false);
         assertThat(health.size(), is(equalTo(1)));
-        {
-            HealthComponentResult component1 = health.stream()
-                .filter(result -> result.name().equals("coordination"))
-                .findAny()
-                .orElseThrow();
-            assertThat(component1.indicators(), is(notNullValue()));
-            assertThat(component1.indicators(), contains(hasMaster));
-        }
+        assertThat(health, contains(hasMaster));
     }
 
     private void assertIndicatorIsUnknownStatus(HealthIndicatorResult result) {
         assertThat(result.status(), is(equalTo(UNKNOWN)));
-        assertThat(result.summary(), is(HealthService.UNKNOWN_RESULT_SUMMARY_PREFLIGHT_FAILED));
+        assertThat(result.symptom(), is(HealthService.UNKNOWN_RESULT_SUMMARY_PREFLIGHT_FAILED));
     }
 
     public void testPreflightIndicatorFailureTriggersUnknownResults() {
         // Preflight checks
-        var hasMaster = new HealthIndicatorResult("has_master", "coordination", RED, null, null, null, null, null);
-        var hasStorage = new HealthIndicatorResult("has_storage", "data", GREEN, null, null, null, null, null);
+        var hasMaster = new HealthIndicatorResult("has_master", RED, null, null, null, null);
+        var hasStorage = new HealthIndicatorResult("has_storage", GREEN, null, null, null, null);
         // Other indicators
-        var networkLatency = new HealthIndicatorResult("network_latency", "coordination", GREEN, null, null, null, null, null);
-        var slowTasks = new HealthIndicatorResult("slow_task_assignment", "coordination", YELLOW, null, null, null, null, null);
-        var shardsAvailable = new HealthIndicatorResult("shards_availability", "data", GREEN, null, null, null, null, null);
+        var networkLatency = new HealthIndicatorResult("network_latency", GREEN, null, null, null, null);
+        var slowTasks = new HealthIndicatorResult("slow_task_assignment", YELLOW, null, null, null, null);
+        var shardsAvailable = new HealthIndicatorResult("shards_availability", GREEN, null, null, null, null);
 
         var service = new HealthService(
             List.of(createMockHealthIndicatorService(hasMaster), createMockHealthIndicatorService(hasStorage)),
@@ -220,89 +144,30 @@ public class HealthServiceTests extends ESTestCase {
             )
         );
 
-        List<HealthComponentResult> health = service.getHealth(null, null, false);
-        assertThat(health.size(), is(equalTo(2)));
         {
-            HealthComponentResult component1 = health.stream()
-                .filter(result -> result.name().equals("coordination"))
-                .findAny()
-                .orElseThrow();
-            // RED because hasMaster was RED
-            assertThat(component1.status(), is(equalTo(RED)));
-            assertThat(component1.indicators(), is(notNullValue()));
-            assertThat(component1.indicators().size(), is(equalTo(3)));
-            // Preflight 1 should be returned as is
-            HealthIndicatorResult hasMasterResult = component1.findIndicator("has_master");
-            assertThat(hasMasterResult, is(equalTo(hasMaster)));
-            // Indicator 1 should be UNKNOWN
-            HealthIndicatorResult networkLatencyResult = component1.findIndicator("network_latency");
-            assertIndicatorIsUnknownStatus(networkLatencyResult);
-            // Indicator 2 should be UNKNOWN
-            HealthIndicatorResult slowTasksResult = component1.findIndicator("slow_task_assignment");
-            assertIndicatorIsUnknownStatus(slowTasksResult);
-        }
-        {
-            HealthComponentResult component2 = health.stream().filter(result -> result.name().equals("data")).findAny().orElseThrow();
-            // UNKNOWN because shardsAvailable will be marked UNKNOWN because hasMaster is RED
-            assertThat(component2.status(), is(equalTo(UNKNOWN)));
-            assertThat(component2.indicators(), is(notNullValue()));
-            assertThat(component2.indicators().size(), is(equalTo(2)));
-            // Preflight 2 should be returned as is
-            HealthIndicatorResult hasStorageResult = component2.findIndicator("has_storage");
-            assertThat(hasStorageResult, is(equalTo(hasStorage)));
-            // Indicator 3 should be UNKNOWN
-            HealthIndicatorResult shardsAvailableResult = component2.findIndicator("shards_availability");
-            assertIndicatorIsUnknownStatus(shardsAvailableResult);
+            List<HealthIndicatorResult> health = service.getHealth(null, false);
+            assertThat(health.size(), is(equalTo(5)));
+            // Preflight indicators unchanged; posflight all say
+            List<String> nonPreflightNames = Stream.of(networkLatency, slowTasks, shardsAvailable)
+                .map(HealthIndicatorResult::name)
+                .toList();
+            health.stream()
+                .filter(healthIndicatorResult -> nonPreflightNames.contains(healthIndicatorResult.name()))
+                .forEach(this::assertIndicatorIsUnknownStatus);
+            List<HealthIndicatorResult> preflightResults = List.of(hasMaster, hasStorage);
+            preflightResults.forEach(healthIndicatorResult -> assertTrue(health.contains(healthIndicatorResult)));
         }
 
-        health = service.getHealth("coordination", null, false);
-        assertThat(health.size(), is(equalTo(1)));
         {
-            HealthComponentResult component1 = health.stream()
-                .filter(result -> result.name().equals("coordination"))
-                .findAny()
-                .orElseThrow();
-            // RED because hasMaster was RED
-            assertThat(component1.status(), is(equalTo(RED)));
-            assertThat(component1.indicators(), is(notNullValue()));
-            assertThat(component1.indicators().size(), is(equalTo(3)));
-            // Preflight 1 should be returned as is
-            HealthIndicatorResult hasMasterResult = component1.findIndicator("has_master");
-            assertThat(hasMasterResult, is(equalTo(hasMaster)));
-            // Indicator 1 should be UNKNOWN
-            HealthIndicatorResult networkLatencyResult = component1.findIndicator("network_latency");
-            assertIndicatorIsUnknownStatus(networkLatencyResult);
-            // Indicator 2 should be UNKNOWN
-            HealthIndicatorResult slowTasksResult = component1.findIndicator("slow_task_assignment");
-            assertIndicatorIsUnknownStatus(slowTasksResult);
+            List<HealthIndicatorResult> health = service.getHealth("slow_task_assignment", false);
+            assertThat(health.size(), is(equalTo(1)));
+            assertIndicatorIsUnknownStatus(health.get(0));
         }
 
-        health = service.getHealth("coordination", "slow_task_assignment", false);
-        assertThat(health.size(), is(equalTo(1)));
         {
-            HealthComponentResult component1 = health.stream()
-                .filter(result -> result.name().equals("coordination"))
-                .findAny()
-                .orElseThrow();
-            assertThat(component1.indicators(), is(notNullValue()));
-            assertThat(component1.indicators().size(), is(equalTo(1)));
-            // Indicator 2 should be UNKNOWN
-            HealthIndicatorResult slowTasksResult = component1.findIndicator("slow_task_assignment");
-            assertIndicatorIsUnknownStatus(slowTasksResult);
-        }
-
-        health = service.getHealth("coordination", "has_master", false);
-        assertThat(health.size(), is(equalTo(1)));
-        {
-            HealthComponentResult component1 = health.stream()
-                .filter(result -> result.name().equals("coordination"))
-                .findAny()
-                .orElseThrow();
-            assertThat(component1.indicators(), is(notNullValue()));
-            assertThat(component1.indicators().size(), is(equalTo(1)));
-            // Preflight 1 should be returned as is
-            HealthIndicatorResult hasMasterResult = component1.findIndicator("has_master");
-            assertThat(hasMasterResult, is(equalTo(hasMaster)));
+            List<HealthIndicatorResult> health = service.getHealth("has_master", false);
+            assertThat(health.size(), is(equalTo(1)));
+            assertThat(health.get(0), is(equalTo(hasMaster)));
         }
     }
 
@@ -311,16 +176,6 @@ public class HealthServiceTests extends ESTestCase {
             @Override
             public String name() {
                 return result.name();
-            }
-
-            @Override
-            public String component() {
-                return result.component();
-            }
-
-            @Override
-            public String helpURL() {
-                return result.helpURL();
             }
 
             @Override
